--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="InputDateIosBlazor" Version="1.0.0" />
+    <ProjectReference Include="..\InputDateIos\DatePicker.csproj" />
   </ItemGroup>
 
 </Project>
