--- a/InputDateIos/DatePicker.csproj
+++ b/InputDateIos/DatePicker.csproj
@@ -7,9 +7,9 @@
     <LangVersion>8.0</LangVersion>
     <RazorLangVersion>3.0</RazorLangVersion>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <Description>InputDate Like Ios Design components for Blazor</Description>
-    <PackageProjectUrl>https://github.com/Alibesharat/InputDateIosBlazor</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/Alibesharat/InputDateIosBlazor</RepositoryUrl>
+    <Description>DatePicker Like Ios Design components for Blazor</Description>
+    <PackageProjectUrl>https://github.com/Alibesharat/DatePickerBlazor</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Alibesharat/DatePickerBlazor</RepositoryUrl>
     <PackageTags>blazor,webkit,Ios_ui, design, razor, components</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -26,8 +26,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0-preview.3.20215.14" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0-preview.3.20215.14" />
   </ItemGroup>
+
 
 </Project>
